# MCU-Capability-Analyzer

./: .gitignore  README.md  all_ram_pages.txt  pyproject.toml  ram_numeric.txt  snippets_doc1.txt  snippets_doc2.txt
output/: board_capabilities.json  capability_validation.txt  sdk_recommendations.txt
reports/: AI_USAGE.md
scripts/: create_test_docs.py  debug_mcu_extraction.py
src/: analyzer.py  main.py
src/collectors/: __init__.py  base_collector.py  board_collector.py  mcu_collector.py  sdk_collector.py
src/models/: __init__.py  analysis_result.py  board_info.py  capability.py  evidence.py  mcu_info.py  sdk_info.py
src/reasoning/: __init__.py  capability_engine.py
src/reasoning/rules/: __init__.py  adc_rule.py  base_rule.py  ethernet_rule.py  uart_rule.py
src/reports/: __init__.py  json_writer.py  sdk_report_writer.py  validation_writer.py
src/utils/: __init__.py  doc_resolver.py  documentation.py  pdf_parser.py
